#202 add icon creator, add icons

--- a/KoOrderRegister/AppShell.xaml
+++ b/KoOrderRegister/AppShell.xaml
@@ -21,36 +21,44 @@
                Padding="0, 10" />
     </Shell.FlyoutFooter>
 
-    <FlyoutItem Title="{x:Static res:AppRes.OrderList}">
+    <FlyoutItem Title="{x:Static res:AppRes.OrderList}"
+                Icon="{AppThemeBinding Light='orders_light.png', Dark='orders_dark.png'}">
         <ShellContent Title="{x:Static res:AppRes.OrderList}"
+                      Icon="{AppThemeBinding Light='orders_light.png', Dark='orders_dark.png'}"
                       Route="OrderListPage"
                       ContentTemplate="{DataTemplate orderListViews:OrderListPage}" />
     </FlyoutItem>
 
-    <FlyoutItem Title="{x:Static res:AppRes.CustomerList}">
+    <FlyoutItem Title="{x:Static res:AppRes.CustomerList}"
+                Icon="{AppThemeBinding Light='group_light.png', Dark='group_dark.png'}">
         <ShellContent Title="{x:Static res:AppRes.CustomerList}"
+                      Icon="{AppThemeBinding Light='group_light.png', Dark='group_dark.png'}"
                       Route="CustomerListPage"
                       ContentTemplate="{DataTemplate customerListViews:CustomerListPage}" />
     </FlyoutItem>
 
 
     <FlyoutItem Title="{x:Static res:AppRes.BetaFuctions}"
-            IsVisible="{x:Static local:AppShell.IsDevBuild}">
-        
-            <ShellContent Title="{x:Static res:AppRes.BetaFuctions}"
-                          Route="BetaFunctionsPages"
-                          ContentTemplate="{DataTemplate betaFuctions:BetaFunctionsPages}" />
-        
-            <ShellContent Title="{x:Static res:AppRes.Exporter}"
-                          Route="ExportersPage"
-                          ContentTemplate="{DataTemplate exporters:ExportersPage}" />
-        
+                Icon="{AppThemeBinding Light='labs_light.png', Dark='labs_dark.png'}"
+                IsVisible="{x:Static local:AppShell.IsDevBuild}">
+
+        <ShellContent Title="{x:Static res:AppRes.BetaFuctions}"
+                      Icon="{AppThemeBinding Light='labs_light.png', Dark='labs_dark.png'}"
+                      Route="BetaFunctionsPages"
+                      ContentTemplate="{DataTemplate betaFuctions:BetaFunctionsPages}" />
+
+        <ShellContent Title="{x:Static res:AppRes.Exporter}"
+                      Icon="{AppThemeBinding Light='csv_light.png', Dark='csv_dark.png'}"
+                      Route="ExportersPage"
+                      ContentTemplate="{DataTemplate exporters:ExportersPage}" />
     </FlyoutItem>
     
     
 
-    <FlyoutItem Title="{x:Static res:AppRes.Settings}">
+    <FlyoutItem Title="{x:Static res:AppRes.Settings}"
+                Icon="{AppThemeBinding Light='settings_light.png', Dark='settings_dark.png'}">
         <ShellContent Title="{x:Static res:AppRes.Settings}"
+                      Icon="{AppThemeBinding Light='settings_light.png', Dark='settings_dark.png'}"
                       Route="SettingsPage"
                       ContentTemplate="{DataTemplate settings:SettingsPage}" />
     </FlyoutItem>
