--- a/KoOrderRegister/Modules/Export/Exporters/Pdf/View/Pages/PdfExportersPage.xaml
+++ b/KoOrderRegister/Modules/Export/Exporters/Pdf/View/Pages/PdfExportersPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="KoOrderRegister.Modules.Export.Pages.ExportersPage"
-             xmlns:vm="clr-namespace:KoOrderRegister.Modules.Export.ViewModel"
+             x:Class="KoOrderRegister.Modules.Export.Pdf.Pages.PdfExportersPage"
+             xmlns:vm="clr-namespace:KoOrderRegister.Modules.Export.Pdf.ViewModel"
              xmlns:res="clr-namespace:KoOrderRegister.Localization"
              Title="{x:Static res:AppRes.Exporter}">
 
@@ -10,7 +10,7 @@
         <Grid>
             <VerticalStackLayout>
                 
-                <Label Text="{x:Static res:AppRes.SelectExportType}"
+                <Label Text="{x:Static res:AppRes.PdfExporter}"
                        Grid.Row="0"
                        Grid.Column="0"
                        Margin="10, 0, 10,10" 
