--- a/KoOrderRegister/Modules/Windows/Notification/Pages/NotificationPages.xaml
+++ b/KoOrderRegister/Modules/Windows/Notification/Pages/NotificationPages.xaml
@@ -5,7 +5,14 @@
              xmlns:res="clr-namespace:KoOrderRegister.Localization"
              Title="{x:Static res:AppRes.Notification}">
 
-        <RefreshView Command="{Binding UpdateNotificationCommand}"
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="{x:Static res:AppRes.ClearAll}"
+                     IconImageSource="{AppThemeBinding Light='x_light.png', Dark='x_dark.png'}"
+                     Command="{Binding ClearAllNotificationsCommand}"
+                     ToolTipProperties.Text="{x:Static res:AppRes.ClearAll}" />
+    </ContentPage.ToolbarItems>
+
+    <RefreshView Command="{Binding UpdateNotificationCommand}"
                      IsRefreshing="{Binding IsRefreshing}"
                      Grid.Row="2">
             <ListView x:Name="notificationListView"
@@ -38,10 +45,10 @@
                                 <HorizontalStackLayout
                                     HorizontalOptions="Center"
                                     Margin="10, 10, 10, 25">
-                                    <Label Text="{Binding NotificationRequest.Title}"
+                                    <!--<Label Text="{Binding NotificationRequest.Title}"
                                            HorizontalOptions="Center"
                                            VerticalOptions="Center" 
-                                           Padding="10,0,10,0"/>
+                                           Padding="10,0,10,0"/>-->
                                     <Label Text="{Binding NotificationRequest.Description}"
                                   
                                            HorizontalOptions="Center"
@@ -50,7 +57,7 @@
 
                             <StackLayout IsVisible="{Binding IsProgressBar}"
                                          Margin="10,10,10,10">
-                                <ProgressBar></ProgressBar>
+                                <ProgressBar Progress="{Binding WindowsOption.ProgressBar.Progress}"/>
                             </StackLayout>
                         </VerticalStackLayout>
                     </ViewCell>
