--- a/KoOrderRegister/Resources/Styles/Colors.xaml
+++ b/KoOrderRegister/Resources/Styles/Colors.xaml
@@ -21,7 +21,7 @@
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
-    <Color x:Key="Magenta">#D600AA</Color>
+    <Color x:Key="Magenta">#88BFCF</Color>
     <Color x:Key="MidnightBlue">#190649</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
 
