--- a/KoOrderRegister/Modules/Remote/Server/Pages/RemoteServerPage.xaml
+++ b/KoOrderRegister/Modules/Remote/Server/Pages/RemoteServerPage.xaml
@@ -6,38 +6,40 @@
              xmlns:cv="clr-namespace:Camera.MAUI;assembly=Camera.MAUI"
              Title="{x:Static res:AppRes.RomteServerSettings}">
 
-    <StackLayout>
-        <Label Text="{x:Static res:AppRes.RomteServerSettings}"
-               Margin="10, 0, 10,10"
-               FontSize="Large"
-               HorizontalOptions="Center" />
-        <VerticalStackLayout>
-            <HorizontalStackLayout HorizontalOptions="Center">
-                <Label  Text="{x:Static res:AppRes.RemoteServerSwitchLabel}"
-                        Margin="10, 9, 10,10" />
-                <Switch IsToggled="{Binding IsRemoteServer}"
-                        Margin="10, 0, 10,10" />
-            </HorizontalStackLayout>
-            <StackLayout IsVisible="{Binding IsRemoteServer}">
+    <ScrollView>
+        <StackLayout>
+            <Label Text="{x:Static res:AppRes.RomteServerSettings}"
+                   Margin="10, 0, 10,10"
+                   FontSize="Large"
+                   HorizontalOptions="Center" />
+            <VerticalStackLayout>
+                <HorizontalStackLayout HorizontalOptions="Center">
+                    <Label  Text="{x:Static res:AppRes.RemoteServerSwitchLabel}"
+                            Margin="10, 9, 10,10" />
+                    <Switch IsToggled="{Binding IsRemoteServer}"
+                            Margin="10, 0, 10,10" />
+                </HorizontalStackLayout>
+                <StackLayout IsVisible="{Binding IsRemoteServer}">
 
-                <RefreshView IsRefreshing="{Binding IsRefreshing}"
-                                 HorizontalOptions="Center">
-                    <VerticalStackLayout HorizontalOptions="Center">
-                        <Label Text="{x:Static res:AppRes.RemoteServerConnectionQrCodeLabel}" />
-                        <cv:BarcodeImage Barcode="{Binding ConnectionString}"
-                                         Aspect="AspectFit"
-                                         WidthRequest="400"
-                                         HeightRequest="400"
-                                         BarcodeWidth="390"
-                                         BarcodeHeight="390"
-                                         BarcodeMargin="5"
-                                         BarcodeBackground="White"
-                                         BarcodeForeground="Black"
-                                         BarcodeFormat="QR_CODE" />
-                        <Entry Text="{Binding ConnectionString}"/>
-                    </VerticalStackLayout>
-                </RefreshView>
-            </StackLayout>
-        </VerticalStackLayout>
-    </StackLayout>
+                    <RefreshView IsRefreshing="{Binding IsRefreshing}"
+                                     HorizontalOptions="Center">
+                        <VerticalStackLayout HorizontalOptions="Center">
+                            <Label Text="{x:Static res:AppRes.RemoteServerConnectionQrCodeLabel}" />
+                            <cv:BarcodeImage Barcode="{Binding ConnectionString}"
+                                             Aspect="AspectFit"
+                                             WidthRequest="400"
+                                             HeightRequest="400"
+                                             BarcodeWidth="390"
+                                             BarcodeHeight="390"
+                                             BarcodeMargin="5"
+                                             BarcodeBackground="White"
+                                             BarcodeForeground="Black"
+                                             BarcodeFormat="QR_CODE" />
+                            <Entry Text="{Binding ConnectionString}" Margin="10" IsReadOnly="True"/>
+                        </VerticalStackLayout>
+                    </RefreshView>
+                </StackLayout>
+            </VerticalStackLayout>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
