--- a/KoOrderRegister/AppShell.xaml
+++ b/KoOrderRegister/AppShell.xaml
@@ -8,6 +8,7 @@
     xmlns:orderListViews="clr-namespace:KoOrderRegister.Modules.Order.Pages"
     xmlns:customerListViews="clr-namespace:KoOrderRegister.Modules.Customer.Pages"
     xmlns:settings="clr-namespace:KoOrderRegister.Modules.Settings.Pages"
+    xmlns:about="clr-namespace:KoOrderRegister.Modules.About.Pages"
     xmlns:excelExporter="clr-namespace:KoOrderRegister.Modules.Export.Excel.Pages"
     xmlns:pdfExporter="clr-namespace:KoOrderRegister.Modules.Export.Pdf.Pages"
     xmlns:htmlExporter="clr-namespace:KoOrderRegister.Modules.Export.Html.Pages"
@@ -109,7 +110,15 @@
                       ContentTemplate="{DataTemplate settings:SettingsPage}" />
     </FlyoutItem>
     
-    
+    <FlyoutItem Title="{x:Static res:AppRes.About}"
+                Icon="{AppThemeBinding Light='about_light.png', Dark='about_dark.png'}">
+        <ShellContent Title="{x:Static res:AppRes.About}"
+                      Icon="{AppThemeBinding Light='about_light.png', Dark='about_dark.png'}"
+                      Route="AboutPage"
+                      ContentTemplate="{DataTemplate about:AboutPage}" />
+    </FlyoutItem>
+
+
 
 
 
